# monarch_bot

./: .gitignore  Cargo.toml  README.md  admin_role_id.txt  administrator_id.txt  guild_id.txt
setup/: Cargo.toml
setup/src/: lib.rs  main.rs
src/: main.rs  main2.rs
switch_admins/: Cargo.toml
switch_admins/src/: main.rs
switch_monarch/: Cargo.toml
switch_monarch/src/: main.rs
