[package]
name = "an_admin_a_day"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#![feature(file_create_new)]

[dependencies]
anyhow = { default-features = false, features = ["std"], version = "1" }
ed25519-dalek = "1"
futures-util = { default-features = false, version = "0.3" }
hex = "0.4"
hyper = { features = ["client", "server", "http2", "runtime"], version = "0.14" }
log = { default-features = false, version = "0.4" }
metrics-runtime = { default-features = false, features = ["metrics-exporter-log", "metrics-observer-json"], version = "0.13" }
once_cell = "1.4"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tokio = { default-features = false, features = ["macros", "rt-multi-thread"], version = "1.0" }
tracing = "0.1"
tracing-subscriber = { default-features = false, features = ["fmt", "tracing-log"], version = "0.3" }
twilight-gateway = "*"
twilight-http = "*"
twilight-lavalink = "*"
twilight-model = "*"
twilight-standby = "*"
twilight-cache-inmemory = "*"
futures = "*"